@@ -598,7 +598,7 @@ class ImportDialog(Frame):
             self.converters = None
         try:
             f = self.textfilereader = pd.read_csv(self.filename,
-                        chunksize=500, error_bad_lines=False,
+                        chunksize=500, on_bad_lines='skip',
                         warn_bad_lines=False, date_parser=dateparse,
                         converters=self.converters, **kwds)
         except Exception as e:
