@@ -15,6 +15,7 @@ Changed tablecolheader to colheader
 Can now set header colors on object
 Removed vertical plot tools option
 Hide/show plot tools button
+Try to extract numeric from mixed data before plotting
 
 ------
 0.12.2
